--- a/index.html
+++ b/index.html
@@ -41,15 +41,23 @@
 
     <header class="jumbotron">
         <div class="container">
-            <div class="row row-header">
+            <div class="row row-header align-items-center">
                 <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo.png" class="img-fluid">
+                <div class="col-12 col-sm">
+                    <div class="row align-items-center">
+                        <div class="col-12 col-sm-6">
+                            <img src="img/logo.png" class="img-fluid">
+                        </div>
+                        <div class="col-12 col-sm-6">
+                            <a href="#reserveTable"><button class="btn btn-warning btn-block btn-sm" id="tableForm">Reserve Table</button></a>
+                        </div>
+                    </div>
                 </div>
+                
 
             </div>
         </div>
@@ -64,7 +72,8 @@
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT</span><span class="badge badge-pill badge-secondary">$4.99</span></h2>
+                        <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT</span><span
+                                class="badge badge-pill badge-secondary">$4.99</span></h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
                             Italian pizza, topped with Cerignola olives, ripe vine
                             cherry tomatoes, Vidalia onion, Guntur chillies and
@@ -82,15 +91,15 @@
             </div>
             <div class="col col-sm col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
                     <div class="media-body">
-                        <h2 class="mt-0">Weekend Grand Buffet</h2>
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
                         <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
                             different salads, six enticing appetizers,
                             six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for
                             just
                             $19.99 per person</p>
                     </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
                 </div>
             </div>
         </div>
@@ -114,6 +123,63 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+
+        <div class="row row-content" id="reserveTable">
+            <div class="col-12 offset-sm-2 col-sm-8">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group row">
+                                <label class="col-12 col-md-2 col-form-label">Number of Guests</label>
+                                <div class="col-md-10">
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="noOfGuests" id="inlineRadio1"
+                                            value="1">
+                                        <label class="form-check-label" for="inlineRadio1">1</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="noOfGuests" id="inlineRadio1"
+                                            value="2">
+                                        <label class="form-check-label" for="inlineRadio1">2</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="noOfGuests" id="inlineRadio1"
+                                            value="3">
+                                        <label class="form-check-label" for="inlineRadio1">3</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="noOfGuests" id="inlineRadio1"
+                                            value="4">
+                                        <label class="form-check-label" for="inlineRadio1">4</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="noOfGuests" id="inlineRadio1"
+                                            value="5">
+                                        <label class="form-check-label" for="inlineRadio1">5</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="noOfGuests" id="inlineRadio1"
+                                            value="6">
+                                        <label class="form-check-label" for="inlineRadio1">6</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-12 col-md-2 col-form-label">Date and Time</label>
+                                <div class="col-6 col-md-4">
+                                    <input type="text" placeholder="Date" class="form-control" name="date">
+                                </div>
+                                <div class="col-6 col-md-4">
+                                    <input type="text" placeholder="Time" class="form-control" name="time">
+                                </div>
+                            </div>
+                            <button class="btn btn-primary offset-md-2">Reserve</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
