--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
@@ -33,9 +36,7 @@
                 </ul>
             </div>
         </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+       
 
     </nav>
 
@@ -53,7 +54,7 @@
                             <img src="img/logo.png" class="img-fluid">
                         </div>
                         <div class="col-12 col-sm-6">
-                            <a href="#reserveTable"><button class="btn btn-warning btn-block btn-sm" id="tableForm">Reserve Table</button></a>
+                            <a href="#reserveTable"><button class="btn btn-warning btn-block btn-sm">Reserve Table</button></a>
                         </div>
                     </div>
                 </div>
@@ -169,10 +170,10 @@
                             </div>
                             <div class="form-group row">
                                 <label class="col-12 col-md-2 col-form-label">Date and Time</label>
-                                <div class="col-6 col-md-4">
+                                <div class="col-12 col-md-4">
                                     <input type="text" placeholder="Date" class="form-control" name="date">
                                 </div>
-                                <div class="col-6 col-md-4">
+                                <div class="col-12 col-md-4">
                                     <input type="text" placeholder="Time" class="form-control" name="time">
                                 </div>
                             </div>
